# edge-detection

./: CMakeLists.txt  README.md  test-edge.c
lib_edge/: CMakeLists.txt
lib_edge/inc/: edge-detection.h  kernals.h  utils.h
lib_edge/src/: edge-detection.c  utils.c
